// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `null`;

exports[`2. loading 1`] = `null`;

exports[`3. an article with no headline falls back to use shortheadline 1`] = `
<article>
  <Helmet>
    <title>
      Some Short Headline
       | 
      
      The Times
    </title>
    <meta
      content="Some Short Headline"
      name="article:title"
    />
    <meta
      content="The Times"
      name="article:publication"
    />
    <meta
      content="Some byline"
      name="author"
    />
    <meta
      content="Some Short Headline"
      property="og:title"
    />
    <meta
      content="article"
      property="og:type"
    />
    <meta
      content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
      property="og:url"
    />
    <meta
      content="https://crop169.io"
      property="og:image"
    />
    <meta
      content="Some Short Headline"
      name="twitter:title"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
      name="twitter:url"
    />
    <meta
      content="https://crop169.io"
      name="twitter:image"
    />
  </Helmet>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <div>
      <div>
        <Image
          aspectRatio={1}
          uri="https://image.io"
        />
      </div>
      <h1
        aria-level="1"
        role="heading"
      >
        Some Short Headline
      </h1>
      <div>
        <ArticleFlags />
      </div>
      <div>
        <div>
          <ArticleBylineWithLinks
            ast={
              Array [
                Object {
                  "attributes": Object {
                    "value": "Some byline",
                  },
                  "children": Array [],
                  "name": "text",
                },
              ],
              "name": "inline",
            },
          ],
          "image": Object {
            "crop": Object {
              "ratio": "1:1",
              "url": "https://image.io",
            },
            "id": "36f9b2e8-0d41-464a-9e95-921bdb6895be",
          },
        },
      ],
      "commentCount": 65,
      "commentsEnabled": true,
      "content": Array [
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "attributes": Object {
                "value": "Some content",
              },
              "children": Array [],
              "name": "text",
            },
          ],
          "name": "paragraph",
        },
      ],
      "expirableFlags": Array [],
      "hasVideo": false,
      "headline": "",
      "id": "198c4b2f-ecec-4f34-be53-c89f83bc1b44",
      "keywords": Array [
        "Supplement",
        "In",
        "Depth",
        "Template",
        "Style",
      ],
      "leadAsset": Object {
        "__typename": "Image",
        "caption": "Some Caption",
        "credits": "Some Credits",
        "crop11": Object {
          "__typename": "Crop",
          "ratio": "1:1",
          "url": "https://crop11.io",
        },
        "crop1251": Object {
          "__typename": "Crop",
          "ratio": "1.25:1",
          "url": "https://crop1251.io",
        },
        "crop169": Object {
          "__typename": "Crop",
          "ratio": "16:9",
          "url": "https://crop169.io",
        },
        "crop23": Object {
          "__typename": "Crop",
          "ratio": "2:3",
          "url": "https://crop23.io",
        },
        "crop32": Object {
          "__typename": "Crop",
          "ratio": "3:2",
          "url": "https://crop32.io",
        },
        "crop45": Object {
          "__typename": "Crop",
          "ratio": "4:5",
          "url": "https://crop45.io",
        },
        "id": "id-123",
        "title": "Some Title",
      },
      "publicationName": "TIMES",
      "publishedTime": "2015-03-13T18:54:58.000Z",
      "relatedArticleSlice": Object {
        "__typename": "StandardSlice",
        "items": Array [
          Object {
            "article": Object {
              "__typename": "Article",
              "bylines": Array [],
              "hasVideo": false,
              "headline": "RA Headline",
              "id": "ra-1",
              "label": "RA Label",
              "leadAsset": Object {
                "__typename": "Image",
                "crop169": Object {
                  "__typename": "Crop",
                  "url": "https://racrop169.io",
                },
                "crop32": Object {
                  "__typename": "Crop",
                  "url": "https://racrop32.io",
                },
                "title": "RA Title",
              },
              "publicationName": "TIMES",
              "publishedTime": "2015-03-23T19:39:39.000Z",
              "shortHeadline": "Headline",
              "shortIdentifier": "2k629tpvh",
              "slug": "this-is-slug",
              "summary105": Array [],
              "summary125": Array [],
              "summary145": Array [],
              "summary160": Array [],
              "summary175": Array [],
              "summary225": Array [],
              "url": "https://ra.io",
            },
          },
        ],
      },
      "section": "Some Section",
      "shortHeadline": "Some Short Headline",
      "shortIdentifier": "2k629tpvh",
      "slug": "this-is-slug",
      "topics": Array [
        Object {
          "name": "Topic",
          "slug": "topic",
        },
      ],
      "url": "https://url.io",
    }
  }
/>
`;

exports[`4. an article with ads 1`] = `
<article>
  <Helmet>
    <title>
      Some Headline
       | 
      
      The Times
    </title>
    <meta
      content="Some Headline"
      name="article:title"
    />
    <meta
      content="The Times"
      name="article:publication"
    />
    <meta
      content="Some byline"
      name="author"
    />
    <meta
      content="Some Headline"
      property="og:title"
    />
    <meta
      content="article"
      property="og:type"
    />
    <meta
      content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
      property="og:url"
    />
    <meta
      content="https://crop169.io"
      property="og:image"
    />
    <meta
      content="Some Headline"
      name="twitter:title"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
      name="twitter:url"
    />
    <meta
      content="https://crop169.io"
      name="twitter:image"
    />
  </Helmet>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <div>
      <div>
        <Image
          aspectRatio={1}
          uri="https://image.io"
        />
      </div>
      <h1
        aria-level="1"
        role="heading"
      >
        Some Headline
      </h1>
      <div>
        <ArticleFlags />
      </div>
      <div>
        <div>
          <ArticleBylineWithLinks
            ast={
              Array [
                Object {
                  "attributes": Object {
                    "value": "Some byline",
                  },
                  "children": Array [],
                  "name": "text",
                },
              ],
              "name": "inline",
            },
          ],
          "image": Object {
            "crop": Object {
              "ratio": "1:1",
              "url": "https://image.io",
            },
            "id": "36f9b2e8-0d41-464a-9e95-921bdb6895be",
          },
        },
      ],
      "commentCount": 65,
      "commentsEnabled": true,
      "content": Array [
        Object {
          "attributes": Object {},
          "children": Array [],
          "name": "ad",
        },
      ],
      "expirableFlags": Array [],
      "hasVideo": false,
      "headline": "Some Headline",
      "id": "198c4b2f-ecec-4f34-be53-c89f83bc1b44",
      "keywords": Array [
        "Supplement",
        "In",
        "Depth",
        "Template",
        "Style",
      ],
      "leadAsset": Object {
        "__typename": "Image",
        "caption": "Some Caption",
        "credits": "Some Credits",
        "crop11": Object {
          "__typename": "Crop",
          "ratio": "1:1",
          "url": "https://crop11.io",
        },
        "crop1251": Object {
          "__typename": "Crop",
          "ratio": "1.25:1",
          "url": "https://crop1251.io",
        },
        "crop169": Object {
          "__typename": "Crop",
          "ratio": "16:9",
          "url": "https://crop169.io",
        },
        "crop23": Object {
          "__typename": "Crop",
          "ratio": "2:3",
          "url": "https://crop23.io",
        },
        "crop32": Object {
          "__typename": "Crop",
          "ratio": "3:2",
          "url": "https://crop32.io",
        },
        "crop45": Object {
          "__typename": "Crop",
          "ratio": "4:5",
          "url": "https://crop45.io",
        },
        "id": "id-123",
        "title": "Some Title",
      },
      "publicationName": "TIMES",
      "publishedTime": "2015-03-13T18:54:58.000Z",
      "relatedArticleSlice": Object {
        "__typename": "StandardSlice",
        "items": Array [
          Object {
            "article": Object {
              "__typename": "Article",
              "bylines": Array [],
              "hasVideo": false,
              "headline": "RA Headline",
              "id": "ra-1",
              "label": "RA Label",
              "leadAsset": Object {
                "__typename": "Image",
                "crop169": Object {
                  "__typename": "Crop",
                  "url": "https://racrop169.io",
                },
                "crop32": Object {
                  "__typename": "Crop",
                  "url": "https://racrop32.io",
                },
                "title": "RA Title",
              },
              "publicationName": "TIMES",
              "publishedTime": "2015-03-23T19:39:39.000Z",
              "shortHeadline": "Headline",
              "shortIdentifier": "2k629tpvh",
              "slug": "this-is-slug",
              "summary105": Array [],
              "summary125": Array [],
              "summary145": Array [],
              "summary160": Array [],
              "summary175": Array [],
              "summary225": Array [],
              "url": "https://ra.io",
            },
          },
        ],
      },
      "section": "Some Section",
      "shortHeadline": "Some Short Headline",
      "shortIdentifier": "2k629tpvh",
      "slug": "this-is-slug",
      "topics": Array [
        Object {
          "name": "Topic",
          "slug": "topic",
        },
      ],
      "url": "https://url.io",
    }
  }
/>
`;
